fix: element overlapping box shadow in large mode for the list

--- a/packages/components/src/List/List.module.scss
+++ b/packages/components/src/List/List.module.scss
@@ -10,6 +10,10 @@
 	width: 100%;
 	overflow: hidden;
 
+	.display-mode-large {
+		padding-top: 2px;
+	}
+
 	:global(.tc-list-toolbar) {
 		flex-grow: 0;
 		flex-shrink: 0;
